--- a/quotation.html
+++ b/quotation.html
@@ -2,56 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Quotation</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
+    body { font-family: Arial, sans-serif; margin: 30px; }
+    h2 { text-align: left; margin-top: 40px; }
+    table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
+    th, td { padding: 10px; border: 1px solid #ccc; text-align: left; }
+    .totals { font-weight: bold; margin-top: 10px; }
+    .signature-pad-container { margin-top: 40px; }
+    .signature-area {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      max-width: 300px;
     }
-    h2 {
-      margin-top: 40px;
-      text-align: left;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    th, td {
-      border: 1px solid #000;
-      padding: 8px;
-      text-align: left;
-    }
-    .signature-pad {
+    canvas {
       border: 1px solid #000;
       width: 100%;
-      height: 200px;
+      height: 150px;
+      touch-action: none;
     }
-    .button-group {
+    .btn-group {
       margin-top: 10px;
+      display: flex;
+      gap: 10px;
     }
-    .button-group button {
-      margin-right: 10px;
+    #signature-preview {
+      margin-top: 10px;
+      border: 1px solid #ccc;
+    }
+    #print-btn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 10px 20px;
+      background-color: black;
+      color: white;
+      border: none;
+      cursor: pointer;
     }
     @media print {
-      #signature-pad, .button-group {
-        display: none;
-      }
+      #print-btn, .signature-area, .btn-group { display: none !important; }
     }
   </style>
 </head>
 <body>
+  <button id="print-btn" onclick="window.print()">Print</button>
 
-  <h1 id="project-name"></h1>
+  <h1 id="project-title">Project Name</h1>
+  <h3 id="user-name">Customer: </h3>
 
-  <!-- Tabel Equipments -->
-  <div id="equipment-section"></div>
+  <h2>Equipments</h2>
+  <div id="equipments-table-container"></div>
+  <div class="totals">Total Cost Equipments: <span id="total-equipments-cost"></span></div>
 
-  <!-- Total Cost Equipments -->
-  <h3>Total Cost Equipments: <span id="total-cost-orders"></span></h3>
-
-  <!-- Tabel Guard and Others -->
   <h2>Guard and Others</h2>
   <table id="guard-table">
     <thead>
@@ -63,162 +68,170 @@
         <th>Amount</th>
       </tr>
     </thead>
-    <tbody></tbody>
+    <tbody id="guard-body"></tbody>
   </table>
+  <div class="totals">Total Cost Guard and Others: <span id="total-guard-cost"></span></div>
 
-  <!-- Total Cost Guard and Others -->
-  <h3>Total Cost Guard and Others: <span id="total-cost-go"></span></h3>
+  <div class="totals">Discount: <span id="discount-val"></span></div>
+  <div class="totals">Grand Total: <span id="grand-total-val"></span></div>
 
-  <!-- Discount -->
-  <h3>Discount: <span id="discount"></span></h3>
-
-  <!-- Grand Total -->
-  <h2>Grand Total: <span id="grand-total"></span></h2>
-
-  <!-- Signature Pad -->
-  <h3>Customer Signature</h3>
-  <canvas id="signature-pad" class="signature-pad"></canvas>
-  <div class="button-group">
-    <button onclick="clearSignature()">Clear</button>
-    <button onclick="saveSignature()">Save</button>
+  <div class="signature-pad-container">
+    <h3>Customer Signature</h3>
+    <div class="signature-area">
+      <canvas id="signature-pad"></canvas>
+      <div class="btn-group">
+        <button onclick="clearSignature()">Clear</button>
+        <button onclick="saveSignature()">Save</button>
+      </div>
+      <div id="signature-preview"></div>
+    </div>
   </div>
-  <div id="saved-signature"></div>
-  <p id="username"></p>
 
   <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const project = urlParams.get("project") || "";
-    const user = urlParams.get("user") || "";
-    const orders = urlParams.get("orders") || "";
-    const guardOrders = urlParams.get("guardorders") || "";
-    const categoryList = urlParams.get("category")?.split("||") || [];
-    const totalcostorders = urlParams.get("totalcostorders") || "";
-    const totalcostGO = urlParams.get("totalcostGO") || "";
-    const discount = urlParams.get("discount") || "";
-    const grandtotal = urlParams.get("grandtotal") || "";
+    function formatCurrency(value) {
+      return value.includes("IDR") ? value : parseInt(value).toLocaleString("id-ID") + " IDR";
+    }
 
-    document.getElementById("project-name").innerText = project;
-    document.getElementById("total-cost-orders").innerText = totalcostorders;
-    document.getElementById("total-cost-go").innerText = totalcostGO;
-    document.getElementById("discount").innerText = discount;
-    document.getElementById("grand-total").innerText = grandtotal;
-    document.getElementById("username").innerText = user;
+    function parseJoinedList(list) {
+      return list ? decodeURIComponent(list).split("||").map(item => item.split("|")) : [];
+    }
 
-    const equipmentSection = document.getElementById("equipment-section");
-    const equipmentData = orders.split("||");
-    let categoryIndex = 0;
-    let currentTable = null;
-    let tbody = null;
-    let rowCount = 0;
+    function groupByCategory(data, categories) {
+      const groups = {};
+      data.forEach(item => {
+        const [name, category, cost, qty, day, amount] = item;
+        if (!groups[category]) groups[category] = [];
+        groups[category].push([name, cost, qty, day, amount]);
+      });
+      return groups;
+    }
 
-    equipmentData.forEach((row, i) => {
-      const [item, cost, qty, day, amount] = row.split("|");
-      if (rowCount === 0) {
-        const header = document.createElement("h2");
-        header.textContent = categoryList[categoryIndex] || "Category";
-        equipmentSection.appendChild(header);
+    function loadData() {
+      const params = new URLSearchParams(window.location.search);
+      const project = params.get("project") || "-";
+      const user = params.get("user") || "-";
+      const orders = parseJoinedList(params.get("orders"));
+      const guardorders = parseJoinedList(params.get("guardorders"));
+      const totalEquipments = params.get("totalcostorders") || "0";
+      const totalGuards = params.get("totalcostGO") || "0";
+      const discount = params.get("discount") || "0%";
+      const grandTotal = params.get("grandtotal") || "0";
+      const categories = [...new Set(orders.map(o => o[1]))];
 
-        currentTable = document.createElement("table");
+      document.getElementById("project-title").textContent = project;
+      document.getElementById("user-name").textContent = Customer: ${user};
+      document.getElementById("total-equipments-cost").textContent = formatCurrency(totalEquipments);
+      document.getElementById("total-guard-cost").textContent = formatCurrency(totalGuards);
+      document.getElementById("discount-val").textContent = discount;
+      document.getElementById("grand-total-val").textContent = formatCurrency(grandTotal);
+
+      const equipmentContainer = document.getElementById("equipments-table-container");
+      const grouped = groupByCategory(orders, categories);
+
+      for (const [cat, items] of Object.entries(grouped)) {
+        const table = document.createElement("table");
         const thead = document.createElement("thead");
         thead.innerHTML = `
+          <tr><th colspan="5">${cat}</th></tr>
           <tr>
-            <th>Item</th>
-            <th>Cost</th>
-            <th>Quantity</th>
-            <th>Day</th>
-            <th>Amount</th>
+            <th>Item</th><th>Cost</th><th>Quantity</th><th>Day</th><th>Amount</th>
           </tr>`;
-        currentTable.appendChild(thead);
-        tbody = document.createElement("tbody");
-        currentTable.appendChild(tbody);
-        equipmentSection.appendChild(currentTable);
+        table.appendChild(thead);
+
+        const tbody = document.createElement("tbody");
+        items.forEach(([name, , cost, qty, day, amount]) => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${name}</td>
+            <td>${formatCurrency(cost)}</td>
+            <td>${qty}</td>
+            <td>${day}</td>
+            <td>${formatCurrency(amount)}</td>`;
+          tbody.appendChild(tr);
+        });
+        table.appendChild(tbody);
+        equipmentContainer.appendChild(table);
       }
 
-      const tr = document.createElement("tr");
-      [item, cost, qty, day, amount].forEach(text => {
-        const td = document.createElement("td");
-        td.textContent = text;
-        tr.appendChild(td);
+      // Guard Table
+      const guardBody = document.getElementById("guard-body");
+      guardorders.forEach(([subject, cost, qty, day, amount]) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${subject}</td>
+          <td>${formatCurrency(cost)}</td>
+          <td>${qty}</td>
+          <td>${day}</td>
+          <td>${formatCurrency(amount)}</td>`;
+        guardBody.appendChild(tr);
       });
-      tbody.appendChild(tr);
+    }
 
-      rowCount++;
-      if (i + 1 < equipmentData.length) {
-        const nextCategory = categoryList[categoryIndex + 1];
-        if (nextCategory && equipmentData[i + 1].startsWith(nextCategory)) {
-          rowCount = 0;
-          categoryIndex++;
-        }
-      }
-    });
-
-    // Guard and Others Table
-    const guardData = guardOrders.split("||");
-    const guardTableBody = document.querySelector("#guard-table tbody");
-
-    guardData.forEach(row => {
-      const [subject, cost, qty, day, amount] = row.split("|");
-      const tr = document.createElement("tr");
-      [subject, cost, qty, day, amount].forEach(text => {
-        const td = document.createElement("td");
-        td.textContent = text;
-        tr.appendChild(td);
-      });
-      guardTableBody.appendChild(tr);
-    });
-
-    // Signature pad
+    // Signature Pad Setup
     const canvas = document.getElementById("signature-pad");
     const ctx = canvas.getContext("2d");
     let drawing = false;
 
-    canvas.addEventListener("mousedown", startDraw);
-    canvas.addEventListener("mousemove", draw);
-    canvas.addEventListener("mouseup", endDraw);
-    canvas.addEventListener("touchstart", startDraw);
-    canvas.addEventListener("touchmove", draw);
-    canvas.addEventListener("touchend", endDraw);
+    function resizeCanvas() {
+      const ratio = window.devicePixelRatio || 1;
+      canvas.width = canvas.offsetWidth * ratio;
+      canvas.height = canvas.offsetHeight * ratio;
+      canvas.getContext("2d").scale(ratio, ratio);
+    }
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
 
     function startDraw(e) {
       drawing = true;
       ctx.beginPath();
-      ctx.moveTo(getX(e), getY(e));
-      e.preventDefault();
+      const pos = getPos(e);
+      ctx.moveTo(pos.x, pos.y);
     }
 
     function draw(e) {
       if (!drawing) return;
-      ctx.lineTo(getX(e), getY(e));
+      const pos = getPos(e);
+      ctx.lineTo(pos.x, pos.y);
       ctx.stroke();
-      e.preventDefault();
     }
 
-    function endDraw(e) {
+    function stopDraw() {
       drawing = false;
-      e.preventDefault();
     }
 
-    function getX(e) {
-      return e.touches ? e.touches[0].clientX - canvas.offsetLeft : e.clientX - canvas.offsetLeft;
+    function getPos(e) {
+      const rect = canvas.getBoundingClientRect();
+      const clientX = e.touches ? e.touches[0].clientX : e.clientX;
+      const clientY = e.touches ? e.touches[0].clientY : e.clientY;
+      return {
+        x: clientX - rect.left,
+        y: clientY - rect.top
+      };
     }
 
-    function getY(e) {
-      return e.touches ? e.touches[0].clientY - canvas.offsetTop : e.clientY - canvas.offsetTop;
-    }
+    canvas.addEventListener("mousedown", startDraw);
+    canvas.addEventListener("mousemove", draw);
+    canvas.addEventListener("mouseup", stopDraw);
+    canvas.addEventListener("mouseleave", stopDraw);
+    canvas.addEventListener("touchstart", startDraw);
+    canvas.addEventListener("touchmove", draw);
+    canvas.addEventListener("touchend", stopDraw);
 
     function clearSignature() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
-      document.getElementById("saved-signature").innerHTML = "";
+      document.getElementById("signature-preview").innerHTML = "";
     }
 
     function saveSignature() {
       const dataURL = canvas.toDataURL();
       const img = document.createElement("img");
       img.src = dataURL;
-      img.style.maxWidth = "300px";
-      document.getElementById("saved-signature").innerHTML = "";
-      document.getElementById("saved-signature").appendChild(img);
+      img.style.maxWidth = "100%";
+      document.getElementById("signature-preview").innerHTML = "";
+      document.getElementById("signature-preview").appendChild(img);
     }
+
+    window.onload = loadData;
   </script>
 </body>
 </html>
